test/should-fail/jfxc1037.fx

/*
 * Regression test: JFXC-1037: report lexical errors 
 *
 * @test/fail
 */


class trial10 { 
    attribute flag: Boolean = false; 
    function f() { 
        if (! flag) { 
            flag = true; 
        } 
    } 
} 

